# ComicV

./: .gitignore  package.json  vite.config.ts
scripts/: fetch-models.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  main.rs  ncnn.rs  pdf.rs  pipeline.rs  waifu2x.rs
