[package]
name = "comicv"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "comicv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rayon = "1"
zip = "2"
lopdf = "0.43"
base64 = "0.22"

# ONNX 추론 — CPU 전용(ort). GPU 가속은 번들된 waifu2x-ncnn-vulkan(Vulkan)이 담당.
# DirectML은 대상 기기(AMD Strix Halo iGPU)에서 출력이 0으로 붕괴해 제거함.
ort = "2.0.0-rc.12"

